Changed the project name from affordance to apigen to reflect the true semantics of the work being done in this project.

--- a/lib/affordance/package.json
+++ b/lib/affordance/package.json
@@ -1,5 +1,5 @@
 {
-    "name":"affordance",
+    "name":"apigen",
     "description":"RESTful API Response Generator in the application/affordance media type.",
     "author":"Tony Tahmouch ttahmouch@gmail.com",
     "version":"0.0.1",
