--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
     "version": "0.0.1",
     "engines": {
         "node": "0.10.x"
+    },
+    "dependencies": {
+        "argo": "0.4.9",
+        "argo-url-router": "0.0.4"
     }
 }
